// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/Skills/Timeline/Timeslice should correctly render the time slice with no end 1`] = `
<PlainButton
  className="be-timeline-time"
  data-resin-target="foobar"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#0061d5",
      "left": "27px",
      "width": "6px",
    }
  }
  type="button"
/>
`;

exports[`components/ContentSidebar/Skills/Timeline/Timeslice should correctly render the time slice with proper end 1`] = `
<PlainButton
  className="be-timeline-time"
  data-resin-target="foobar"
  onClick={[Function]}
  style={
    Object {
      "backgroundColor": "#0061d5",
      "left": "27px",
      "width": "27px",
    }
  }
  type="button"
/>
`;
